--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ github_username:  arjankc
 gplus_username:  ArjanKC
 linkedin_public_url: arjankc # Example: For public profile 'www.linkedin.com/in/john-smith', 'john-smith' is your linkedin_public_url
 disqus_username: ArjanKC
-profile_picture: https://scontent.fktm3-1.fna.fbcdn.net/v/t1.0-9/20882223_10207648982262930_2853917422453853587_n.jpg
+profile_picture: https://scontent.fktm3-1.fna.fbcdn.net/v/t1.0-1/p160x160/20882223_10207648982262930_2853917422453853587_n.jpg?oh=42b1319a659338abf86513c066778646&oe=5A656196
 
 # Build settings
 markdown: kramdown
